crates/proef-cli/tests/snapshots/corpus__resolve__unknown_variable.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: stderr
---
proef::resolve::unknown_variable

  × in macro `fetch`: unknown variable `${nope}`
   ╭─[tests/errors/resolve__unknown_variable/case.feature:3:5]
 2 │   Scenario: S
 3 │     When I fetch the page
   ·     ─────────────────────
   ╰────

1 error(s)
